Fixing the layout issues for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -45,13 +45,20 @@ h4 {
     /* padding: 40px; */
     display: grid;
     grid-template: 40px 40px / 1fr 1fr;
-    gap: 30px;
+    gap: 40px;
     width: 100%;
-    margin: 50px 0px 40px;
+    margin: 75px 0px;
 }
 
 button {
     grid-column: 1 / -1;
+    font-size: 1.25rem;
+}
+
+.input1,
+.input2 {
+    font-size: 1.3rem;
+    text-indent: 15px;
 }
 
 input,
@@ -60,6 +67,7 @@ button {
     border: none;
     text-indent: 5px;
     width: 100%;
+    height: 50px;
 }
 
 .meme {
@@ -70,6 +78,7 @@ button {
 .meme--image {
     width: 100%;
     height: 100%;
+    border-radius: 5px;
 }
 .meme--text {
     position: absolute;
@@ -78,9 +87,9 @@ button {
     left: 50%;
     transform: translateX(-50%);
     margin: 15px 0;
-    padding: 0 5px;
+    padding: 50px 5px;
     font-family: impact, sans-serif;
-    font-size: 2em;
+    font-size: 2.5em;
     text-transform: uppercase;
     color: white;
     letter-spacing: 1px;
@@ -96,17 +105,22 @@ button {
 
 
 
-/* @media only screen and (max-width: 360px) { 
-    .meme--image {     
-        max-width: 100%;
-        border-radius: 10px;
+@media only screen and (max-width: 360px) { 
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        margin: 0 auto;
     }
 
     .main--container {
-        padding: 40px;
         display: grid;
         grid-template: 40px 40px / 1fr 1fr;
-        gap: 10px;
+        /* gap: 10px; */
+        width: 100%;
     }
     
     button {
@@ -120,4 +134,12 @@ button {
         text-indent: 5px;
         width: 100%;
     }
-} */
+
+    .meme--text {
+        font-size: 1rem;
+        padding: 10px 0px;
+    }
+
+
+
+}
